--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <section id="gamestartmenu">
       <h1 class="game-name">ALPHA DROP</h1>
       <button id="startButton">start game</button>
+      <div class="rules">
+        Type the character within the falling block as quickly and accurately as possible.
+        You will lose a life for any incorrect key presses.
+        You will also lose a life if any blocks fall past the bottom.
+        Good luck!
+
+      </div>
     </section>
 
     <section id="gameovermenu">
