--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
       <link rel="stylesheet" href="./stylesheets/styles.css">
       <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <title></title>
   </head>
   <body>
