--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
       <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <title></title>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107727420-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag("js", new Date());
+
+gtag("config", "UA-107727420-1");
+</script>
+
   </head>
   <body>
     <section id="gamestartmenu">
